Closed Bug 613982 Opened 15 years ago Closed 15 years ago

Crash [@ libdvm.so@0x48c42 ] in sa_stream_write when closing a tab playing audio

Categories

(Firefox for Android Graveyard :: General, defect)

ARM
Android
defect
Not set
normal

Tracking

(fennec2.0b4+)

VERIFIED FIXED
Tracking Status
fennec 2.0b4+ ---

People

(Reporter: mbrubeck, Assigned: dougt)

References

()

Details

(Keywords: crash, crashreportid)

Crash Data

Attachments

(1 file)

Steps to reproduce: 1. Open http://html5zombo.com/ in a new tab 2. After the page loads and starts playing audio, close the tab. Results: http://crash-stats.mozilla.com/report/index/bp-a91578b1-913f-4f48-bd9d-c56ac2101122 Reproducible in the 2010-11-22-04-mozilla-central-android-r7 nightly.
tracking-fennec: --- → ?
Looks like this crash [@ libdvm.so@0x5b3de ] is the same thing: http://crash-stats.mozilla.com/report/index/175554dc-4b07-45ab-a71e-6f0422101117
Attached patch patch v.1Splinter Review
part of this should have been done in the remote audio bug.
Attachment #492367 - Flags: review?(kinetik)
Attachment #492367 - Flags: review?(kinetik) → review+
tracking-fennec: ? → 2.0b4+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Oh crud, this isn't right. nsAudioStream's dtor wasn't made virtual when it was refactored for IPC, so this code is never going to run. That's probably why the crash stopped--the root cause is still present.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
The good news is, I'm wrong. NS_DECL_ISUPPORTS in each of the nsAudioStream subclasses has a virtual Release(), which is ultimately responsible for deleting the object, so the correct dtor is called due to that.
Status: REOPENED → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
Re-opening based on comment #4 and that there is no follow-up bug. Also, the crash is still occurring on build: Mozilla/5.0 (Android; Linux armv71; rv:2.0b8pre) Gecko/20101123 Namoroka/4.0b8pre Fennec/4.0b3pre It's not on crash-stats, but the signature on my device was: 3ffa037-5eca-13fb-158fdd83-00cf8049
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
did you read comment #5?
sigh, i need my morning tea.
Status: REOPENED → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
verified FIXED on build: Mozilla/5.0 (Android; Linux armv71; rv:2.0b8pre) Gecko/20101123 Namoroka/4.0b8pre Fennec/4.0b3pre follow-up crasher filed: https://bugzilla.mozilla.org/show_bug.cgi?id=614267
Status: RESOLVED → VERIFIED
Crash Signature: [@ libdvm.so@0x48c42 ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: