[Bug 613982] Crash [@ libdvm.so@0x48c42 ] in sa_stream_write when closing a tab playing audio. r=kinetik. a=blocking-fennec

--HG--
extra : rebase_source : 825c83d3e804d9786b09a74e6ba216d03aa6d896